# sharing-knowledge-lab01

./: .gitignore  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/v1/: auth.py  orders.py  products.py  router.py  users.py
app/api/v2/: auth.py  router.py  users.py
app/core/: database.py  exceptions.py  security.py
app/data/: orders.json  products.json  users.json
app/models/: order.py  product.py  user.py
notebook/: async.ipynb  auth.ipynb  design-fundamentals.ipynb
postman/: postman_collection.json
scripts/: generate_hash.py  rehash_passwords.py  test_permissions.py
